# LinuxOS

./: .gitignore  README.md  build.sh  setup.cfg  wget-list  wget-list.old
src/: __main__.py  download.py  extract.py  organize.py
