[metadata]
name = linuxos-utils-RedstoneWizard08
version = 0.0.1
author = RedstoneWizard08
author_email = jacob1coder@gmail.com
description = Utilities for my OS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedstoneWizard08/LinuxOS
project_urls =
    Bug Tracker = https://github.com/RedstoneWizard08/LinuxOS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
